# rag-chatbot-originbluy

./: .env.example  .gitignore  AI_Developer_LLM_Technical_Task.txt  README.md  feedback.json  main.py  pyproject.toml
app/: api.py  document_loader.py  embedding.py  llm_chain.py  vector_store.py
chroma_db/: chroma.sqlite3
static/: index.html  script.js  style.css
